Removed Phone Number

--- a/elements.html
+++ b/elements.html
@@ -205,11 +205,9 @@
         <section class="split contact">
           <section class="alt">
             <h3>Address</h3>
-            <p>ISLAMABAD, PAKISTAN<br /></p>
+            <p>Riyadh, Saudi Arabia<br /></p>
           </section>
           <section>
-            <h3>Phone</h3>
-            <p>0092-336-3847044</p>
           </section>
           <section>
             <h3>Email</h3>
