Updated Phone Number

--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
             <h3>Address</h3>
             <p>Riyadh, Saudi Arabia<br /></p>
           </section>
+	<section class="alt">
+            <h3>Phone</h3>
+            <p>0594247834<br /></p>
+          </section>
           <section>
             <h3>Email</h3>
             <p>gulzarahmedbutt78@gmail.com</p>
